--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-flow-renderer": "^10.3.16",
+    "react-hook-form": "^7.35.0",
     "react-query": "^3.39.2",
     "zod": "^3.18.0"
   },
@@ -23,8 +25,11 @@
     "@types/node": "18.7.3",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.5",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
