--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@trpc/next": "^9.27.0",
     "@trpc/react": "^9.27.0",
     "@trpc/server": "^9.27.0",
+    "dom-to-image": "^2.6.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,6 +23,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@types/dom-to-image": "^2.6.4",
     "@types/node": "18.7.3",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
