--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-flow-renderer": "^10.3.16",
     "react-hook-form": "^7.35.0",
+    "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
     "zod": "^3.18.0"
   },
