--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.8",
     "@trpc/client": "^9.27.0",
     "@trpc/next": "^9.27.0",
     "@trpc/react": "^9.27.0",
     "@trpc/server": "^9.27.0",
+    "dagre": "^0.8.5",
     "dom-to-image": "^2.6.0",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -21,9 +23,10 @@
     "react-hook-form": "^7.35.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
-    "zod": "^3.18.0"
+    "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/dagre": "^0.7.48",
     "@types/dom-to-image": "^2.6.4",
     "@types/node": "18.7.3",
     "@types/react": "18.0.17",
